force-app/main/default/objects/District__c/fields/Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <type>Lookup</type>
</CustomField>