force-app/main/default/objects/District__c/fields/District_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Code__c</fullName>
    <label>District Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>