force-app/main/default/objects/District__c/fields/Donor_Services_Region__c.field-meta.xml
<CustomField>
    <fullName>Donor_Services_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Services Region</label>
    <referenceTo>Collections_Region__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <type>Lookup</type>
</CustomField>