force-app/main/default/objects/District__c/fields/Skedulo_Region__c.field-meta.xml
<CustomField>
    <fullName>Skedulo_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skedulo Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <type>Lookup</type>
</CustomField>