force-app/main/default/objects/District__c/fields/UFID__c.field-meta.xml
<CustomField>
    <fullName>UFID__c</fullName>
    <externalId>true</externalId>
    <label>UFID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>